--- a/SampleWebsite/Views/Shared/_Layout.cshtml
+++ b/SampleWebsite/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                 <ul id="menu">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Model Bind a Thing", "ModelBindAThing", "Home")</li>
                 </ul>
 
             </div>
