Value provider sample

--- a/SampleWebsite/Views/Shared/_Layout.cshtml
+++ b/SampleWebsite/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Model Bind a Thing", "ModelBindAThing", "Home")</li>
+                    <li>@Html.ActionLink("Get A Sentence", "GetASentence", "Home")</li>
                 </ul>
 
             </div>
